# sshkeyman

./: CLAUDE.md  Cargo.toml  LICENSE  PKGBUILD  README.md
.github/workflows/: release.yml
locales/: en.toml  zh-CN.toml
src/: assets.rs  config.rs  export.rs  i18n.rs  main.rs  remote.rs  ssh.rs
src/routes/: config.rs  index.rs  keys.rs  mod.rs  remote.rs  transfer.rs
static/: style.css
templates/: config.html  config_edit.html  config_raw.html  index.html  remote_copy.html
