[package]
name = "sshkeyman"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
askama = "0.15"
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6", features = ["fs"] }
ssh-key = { version = "0.6", features = ["ed25519", "rsa"] }
dirs = "6"
tar = "0.4"
flate2 = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[package.metadata.deb]
maintainer = "zyxisme"
depends = "libc6"
section = "utils"
assets = [
    ["target/release/sshkeyman", "usr/bin/sshkeyman", "755"],
]

[package.metadata.rpm]
assets = [
    { source = "target/release/sshkeyman", dest = "/usr/bin/sshkeyman", mode = "755" },
]
