[package]
name = "sshkeyman"
version = "0.1.1"
edition = "2024"
authors = ["zyxisme <d0116u@gmail.com>"]
description = "Web-based SSH key & config manager in Rust. "
readme = "README.md"
license = "MIT"
repository = "https://github.com/zyxisme/sshkeyman"
keywords = ["sshkey","ssh"]
categories = ["development-tools"]
documentation = "https://docs.rs/sshkeyman"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
askama = "0.15"
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6", features = ["fs"] }
ssh-key = { version = "0.6", features = ["ed25519", "rsa"] }
dirs = "6"
tar = "0.4"
flate2 = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
toml = "0.8"
unic-langid = { version = "0.9", features = ["macros"] }

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "sshkeyman"
doc = false
